<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_date"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/sample_login"/>

        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/sample_logout"/>
    </LinearLayout>
</LinearLayout>
