<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextClock
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_gravity="center|top"
            android:layout_height="wrap_content"
            android:format12Hour="@string/date_format"
            android:format24Hour="@string/date_format"/>

        <TextClock
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:format12Hour="@string/time_format"
            android:format24Hour="@string/time_format"
            android:textSize="40sp"
            android:layout_marginBottom="0dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tracker_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <xyz.danoz.recyclerviewfastscroller.vertical.VerticalRecyclerViewFastScroller
                android:id="@+id/fast_scroller"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
